@@ -46,6 +46,7 @@ Revision history for Perl module Math::Prime::Util
     - binomialmod(n,k,m)              fast binomial(n,k) mod m
     - submod(a, b, n)                 a - b mod n
     - rootmod(a, k, n)                modular k-th root
+    - vecequal(\@a, \@b)              compare two arrays for equality
 
     [FIXES]
 
